# 4sem

./: .gitignore  CMakeLists.txt  main.cpp  one more branch now!  sourse.cpp  task1-1  task1-2 branch  task1-2 in master  task1-3  timer.cpp
1/: print_clock.cpp  sem1.cpp  task1-1  task1-3
10/: DNS_resolver.cpp  accept_connection.cpp  active_socket.cpp  client_endpoint.cpp  connect_socket.cpp  passive_socket.cpp  passive_socket_bind.cpp  read_socket.cpp  server_endpoint.cpp  write_socket.cpp
11/arcanoid/: arc.cpp
2/: bitset.cpp  forward_list.cpp  multiarray.cpp  sem.cpp  sem2.cpp  tuple_printer.cpp
3/: hash_function.cpp  range.cpp  sem.cpp
4/: sem.cpp
5/: locale.cpp  sem.cpp
6/: path_parts.cpp  sem.cpp
7/: accumulate_async (1).cpp  scoped_thread.cpp  sem.cpp
8/: sem.cpp  threadsafe_queue.cpp
9/: anonymous_condition.cpp  anonymous_mutex.cpp  client.cpp  client_file_mapping.cpp  client_shared_memory.cpp  library.cpp  library_call.cpp  managed_shared_memory_array.cpp  managed_shared_memory_destroy.cpp  managed_shared_memory_string.cpp  managed_shared_memory_variable.cpp  named_condition.cpp  named_mutex.cpp  server.cpp  server_file_mapping.cpp  server_shared_memory.cpp
hw10/: client.cpp  server.cpp  soket_data_transfer.h
hw11/: copy.cpp  copy2.cpp  game.cpp  test.cpp
hw12/brownian_motion/: main.cpp  particle.cpp  particle.h  system.cpp  system.h
hw12/crystal/: functions.hpp  main.cpp  particle.cpp  particle.hpp
hw12/julia/: calculator.cpp  calculator.hpp  main.cpp  view.hpp  visualizer.cpp  visualizer.hpp
hw12/particles/: link.cpp  link.hpp  system.cpp  system.hpp
hw2/: task2-1.cpp  task2-2.cpp  task2-3.cpp
hw3/: Timer.h  mydata.txt  mydata2.txt  mydata3.txt  mydata4.txt  plot1.py  plot2.py  plot3.py  plot4.py  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
hw4/: task.cpp
hw5/: 1.cpp  2.cpp  4.cpp  r  romanized_cyrillic.txt  task3.cpp
hw6/: 1.cpp  2.cpp  2_data.txt  3.cpp  4.cpp  result1.txt  test1.txt
hw6/4_jsons/: 0.txt  1.txt  2.txt
hw7/: 1.cpp  2.cpp  2_data.txt  2_plot.py  3.cpp  4.cpp  4_data.txt  Timer.h  test.cpp
hw8/: 1.cpp  2.cpp  3.cpp  4.cpp  Timer.h  test.cpp  thread_guard.hpp  threadsafe_queue.hpp  threadsafe_stack.hpp
hw9/: app.cpp  client.cpp  garbage_collector.cpp  server.cpp
